--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       color: #fff;
       text-align: center;
     }
-      @media (max-width: 950px) {
+      @media screen and (min-device-width : 320px) and (max-device-width : 480px) {
         .pricing-container {
         flex-direction: column;
         height: 100%;
