--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Order Your Cybertruck</title>
-    <link rel="icon" href="./cyb.avif">
+    
+    <link rel="icon" href="./cy.png">
     <style>
       html{
         
