--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Order Your Cybertruck</title>
     
-    <link rel="icon" href="./cy.png">
+    <link rel="icon" href="./cy.png" type="image/x.icon">
     <style>
       html{
         
